--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "google-auth-library": "^10.4.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10"
   }
